<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF0000"

    tools:context="matisek.pokedex.PokemonsOnline"
    android:weightSum="1">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        card_view:cardCornerRadius="4dp"
        >
        <ImageView


            android:background="#FFFFFF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageViewOfPokemon"
            android:layout_gravity="center_horizontal" />
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.06">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/number"
            android:id="@+id/textViewNumber" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewNumerOfPokemon"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:id="@+id/textViewName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewNameOfPokemon"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/experience"
            android:id="@+id/textVieweExperience" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewExperienceForPokemon"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="57dp"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/height"
            android:id="@+id/textViewHeight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewHeightOfPokemon"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="53dp"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/weight"
            android:id="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewWeightOfPokemon"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.22">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"

            android:id="@+id/buttonPrevious" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:id="@+id/buttonSave" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/buttonNext" />
    </LinearLayout>

</LinearLayout>
